--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -166,7 +166,6 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ env.tf_version }}
-          terraform_wrapper: false
 
       - name: Terraform Init
         working-directory: ${{ matrix.env.tf_working_dir }}
@@ -200,14 +199,34 @@ jobs:
         working-directory: ${{ matrix.env.tf_working_dir }}
         run: terraform apply plan
 
-      - name: Get Terraform Outputs
-        id: terraform-outputs
+#      - name: Get Terraform Outputs
+#        id: terraform-outputs
+#        working-directory: ${{ matrix.env.tf_working_dir }}
+#        run: |
+#          echo "codedeploy_app_name=$(terraform output -raw codedeploy_app_name)" >> $GITHUB_OUTPUT
+#          echo "codedeploy_deployment_group_name=$(terraform output -raw codedeploy_deployment_group_name)" >> $GITHUB_OUTPUT
+#          echo "codedeploy_appspec_json_file=$(terraform output -raw codedeploy_appspec_json_file)" >> $GITHUB_OUTPUT
+#          echo "url=$(terraform output -raw url)" >> $GITHUB_OUTPUT
+
+      - name: Get CD App Name
+        id: cd-app-name
         working-directory: ${{ matrix.env.tf_working_dir }}
-        run: |
-          echo "codedeploy_app_name=$(terraform output -raw codedeploy_app_name)" >> $GITHUB_OUTPUT
-          echo "codedeploy_deployment_group_name=$(terraform output -raw codedeploy_deployment_group_name)" >> $GITHUB_OUTPUT
-          echo "codedeploy_appspec_json_file=$(terraform output -raw codedeploy_appspec_json_file)" >> $GITHUB_OUTPUT
-          echo "url=$(terraform output -raw url)" >> $GITHUB_OUTPUT
+        run: terraform output -json codedeploy_app_name | tr -d '"'
+
+      - name: Get CD Deployment Group Name
+        id: cd-group-name
+        working-directory: ${{ matrix.env.tf_working_dir }}
+        run: terraform output -json codedeploy_deployment_group_name | tr -d '"'
+
+      - name: Get CD Appspec File
+        id: cd-appspec-file
+        working-directory: ${{ matrix.env.tf_working_dir }}
+        run: terraform output -json codedeploy_appspec_json_file | tr -d '"'
+
+      - name: Get URL
+        id: url
+        working-directory: ${{ matrix.env.tf_working_dir }}
+        run: terraform output -json url | tr -d '"'
 
       - name: CodeDeploy
         uses: byu-oit/github-action-codedeploy@v1
