--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ env:
   node_version: "18.x"
   tf_version: "1.3.2" # must match value in iac/*/app/*.tf
   FORCE_COLOR: 3
-
 concurrency: ${{ github.ref }}
 jobs:
   env:
@@ -32,7 +31,6 @@ jobs:
             ]
           }'
           echo matrix=`echo $matrix | jq -c .` >> $GITHUB_ENV
-
       - name: Set up STG Environment Variables
         if: github.ref == 'refs/heads/stg'
         run: |
@@ -51,7 +49,6 @@ jobs:
             ]
           }'
           echo matrix=`echo $matrix | jq -c .` >> $GITHUB_ENV
-
       - name: Set up PRD/CPY Environment Variables
         if: github.ref == 'refs/heads/prd'
         # TODO: When prd really is production, in prd environment (first block below):
@@ -84,7 +81,6 @@ jobs:
             ]
           }'
           echo matrix=`echo $matrix | jq -c .` >> $GITHUB_ENV
-
     outputs:
       matrix: ${{ env.matrix }}
 
@@ -166,6 +162,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ env.tf_version }}
+          terraform_wrapper: false
 
       - name: Terraform Init
         working-directory: ${{ matrix.env.tf_working_dir }}
@@ -199,34 +196,14 @@ jobs:
         working-directory: ${{ matrix.env.tf_working_dir }}
         run: terraform apply plan
 
-#      - name: Get Terraform Outputs
-#        id: terraform-outputs
-#        working-directory: ${{ matrix.env.tf_working_dir }}
-#        run: |
-#          echo "codedeploy_app_name=$(terraform output -raw codedeploy_app_name)" >> $GITHUB_OUTPUT
-#          echo "codedeploy_deployment_group_name=$(terraform output -raw codedeploy_deployment_group_name)" >> $GITHUB_OUTPUT
-#          echo "codedeploy_appspec_json_file=$(terraform output -raw codedeploy_appspec_json_file)" >> $GITHUB_OUTPUT
-#          echo "url=$(terraform output -raw url)" >> $GITHUB_OUTPUT
-
-      - name: Get CD App Name
-        id: cd-app-name
+      - name: Get Terraform Outputs
+        id: terraform-outputs
         working-directory: ${{ matrix.env.tf_working_dir }}
-        run: terraform output -json codedeploy_app_name | tr -d '"'
-
-      - name: Get CD Deployment Group Name
-        id: cd-group-name
-        working-directory: ${{ matrix.env.tf_working_dir }}
-        run: terraform output -json codedeploy_deployment_group_name | tr -d '"'
-
-      - name: Get CD Appspec File
-        id: cd-appspec-file
-        working-directory: ${{ matrix.env.tf_working_dir }}
-        run: terraform output -json codedeploy_appspec_json_file | tr -d '"'
-
-      - name: Get URL
-        id: url
-        working-directory: ${{ matrix.env.tf_working_dir }}
-        run: terraform output -json url | tr -d '"'
+        run: |
+          echo "codedeploy_app_name=$(terraform output -raw codedeploy_app_name)" >> $GITHUB_OUTPUT
+          echo "codedeploy_deployment_group_name=$(terraform output -raw codedeploy_deployment_group_name)" >> $GITHUB_OUTPUT
+          echo "codedeploy_appspec_json_file=$(terraform output -raw codedeploy_appspec_json_file)" >> $GITHUB_OUTPUT
+          echo "url=$(terraform output -raw url)" >> $GITHUB_OUTPUT
 
       - name: CodeDeploy
         uses: byu-oit/github-action-codedeploy@v1
