--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@byu-oit/express-logger": "^0.3.6",
     "@byu-oit/logger": "^0.3.14",
+    "aws-sdk": "^2.1250.0",
     "express": "^4.18.2",
     "openapi-enforcer": "^1.22.0",
     "openapi-enforcer-middleware": "^2.2.0",
