--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "@aws-sdk/lib-dynamodb": "^3.204.0",
     "@byu-oit/express-logger": "^0.3.6",
     "@byu-oit/logger": "^0.3.14",
-    "aws-sdk": "^2.1250.0",
+    "aws-sdk-client-mock": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "openapi-enforcer": "^1.22.0",
     "openapi-enforcer-middleware": "^2.2.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/supertest": "^2.0.12",
